[gd_scene load_steps=18 format=2]

[ext_resource path="res://cenas/PlanodeFundo.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/imagens/personagem.png" type="Texture" id=2]
[ext_resource path="res://assets/fonte/Pixelmania.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/imagens/btn_blue.png" type="Texture" id=4]
[ext_resource path="res://assets/imagens/btn_green.png" type="Texture" id=5]
[ext_resource path="res://assets/imagens/btn_red.png" type="Texture" id=6]
[ext_resource path="res://scripts/UIMenu.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 20, 28, 10, 14 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 30, 28, 10, 14 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 12
outline_size = 3
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 6
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 64, 32 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0

[sub_resource type="DynamicFont" id=7]
size = 6
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 64, 32 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0

[sub_resource type="DynamicFont" id=9]
size = 6
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 64, 32 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0

[node name="UIMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlanodeFundo" parent="." instance=ExtResource( 1 )]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 118, 35 )
scale = Vector2( 3, 3 )
frames = SubResource( 3 )
playing = true

[node name="LabelNomeJogo" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -93.5
margin_top = -11.5
margin_right = 93.5
margin_bottom = 11.5
custom_colors/font_color = Color( 0.901961, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "JUMP RUNNER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonJogar" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -27.0
margin_right = 60.0
margin_bottom = -5.0
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
text = "JOGAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonConfiguracoes" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -42.0
margin_top = -27.0
margin_right = 56.0
margin_bottom = -5.0
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
text = "CONFIGURAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSair" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -47.0
margin_top = -27.0
margin_right = -5.0
margin_bottom = -5.0
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
text = "SAIR"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ButtonJogar" to="." method="_on_ButtonJogar_pressed"]
[connection signal="pressed" from="ButtonConfiguracoes" to="." method="_on_ButtonConfiguracoes_pressed"]
[connection signal="pressed" from="ButtonSair" to="." method="_on_ButtonSair_pressed"]
